EDGE-304 get application specification API added
